[build-system]
# Enable "setuptools-rust" to use effects written in Rust.
#requires = ["setuptools"]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "genevative"
version = "0.3.0"
dependencies = [
	"ipython>=9.4.0",
	"matplotlib>=3.10.3",
	"numpy",
	"pdoc>=15.0.4",
	"scipy",
	"sounddevice>=0.5.2",
]

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pyflakes>=3.4.0",
    "pylint>=3.3.7",
]

#[[tool.setuptools-rust.ext-modules]]
## Private Rust extension module to be nested into the Python package
#target = "genevative._lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
#                             # but you can add a prefix to nest it inside of a Python package.
#path = "Cargo.toml"      # Default value, can be omitted
#binding = "PyO3"         # Default value, can be omitted
